Add Google AdSense verification code

--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="401k calculator, retirement calculator, employer match calculator, 401k contribution calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/401k.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -220,5 +224,6 @@
     </footer>
 
     <script src="../js/401k.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
