--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="debt payoff calculator, debt snowball, debt avalanche, pay off debt, debt free calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/debt-payoff.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -244,5 +248,6 @@
     </footer>
 
     <script src="../js/debt-payoff.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
