--- a/calculators/emergency-fund.html
+++ b/calculators/emergency-fund.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Fund Calculator - How Much Do You Need?</title>
     <meta name="description" content="Free emergency fund calculator. Calculate how much you need in your emergency fund based on your monthly expenses.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -190,5 +195,6 @@
     </footer>
 
     <script src="../js/emergency-fund.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
