--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Affordability Calculator - How Much House Can I Afford?</title>
     <meta name="description" content="Free home affordability calculator. Find out how much house you can afford based on your income, debts, and down payment.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -185,5 +190,6 @@
     </footer>
 
     <script src="../js/home-affordability.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
