--- a/calculators/investment-return.html
+++ b/calculators/investment-return.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="investment calculator, ROI calculator, return on investment, investment comparison, stock return calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/investment-return.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -127,5 +131,6 @@
     </footer>
 
     <script src="../js/investment-return.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
