--- a/calculators/loan-payoff.html
+++ b/calculators/loan-payoff.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="loan payoff calculator, debt payoff calculator, extra payment calculator, loan amortization, pay off loan early">
     <link rel="canonical" href="https://financecalc.cc/calculators/loan-payoff.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -147,5 +151,6 @@
     </footer>
 
     <script src="../js/loan-payoff.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
