--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -8,9 +8,20 @@
     <meta name="keywords" content="mortgage calculator, home loan calculator, monthly payment calculator, amortization schedule, mortgage interest">
     <link rel="canonical" href="https://financecalc.cc/calculators/mortgage.html">
 
+    <!-- Force HTTPS -->
+    <script>if(location.protocol !== 'https:' && location.hostname !== 'localhost'){location.replace('https:' + location.href.substring(location.protocol.length));}</script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9483557811977052" crossorigin="anonymous"></script>
 
     <script type="application/ld+json">
     {
@@ -202,5 +213,6 @@
     </footer>
 
     <script src="../js/mortgage.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
