--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refinance Calculator - Should You Refinance Your Mortgage?</title>
     <meta name="description" content="Free refinance calculator. See if refinancing your mortgage could save you money. Compare your current loan with new rates.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -192,5 +197,6 @@
     </footer>
 
     <script src="../js/refinance.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
