--- a/calculators/retirement.html
+++ b/calculators/retirement.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="retirement calculator, retirement planning, 401k calculator, retirement savings, how much to retire">
     <link rel="canonical" href="https://financecalc.cc/calculators/retirement.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -160,5 +164,6 @@
     </footer>
 
     <script src="../js/retirement.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
