--- a/calculators/roth-vs-traditional.html
+++ b/calculators/roth-vs-traditional.html
@@ -6,7 +6,12 @@
     <title>Roth vs Traditional IRA/401k Calculator - Compare Retirement Accounts</title>
     <meta name="description" content="Compare Roth vs Traditional IRA and 401k accounts. Calculate which retirement account type is better for your tax situation and financial goals.">
     <meta name="keywords" content="roth vs traditional, IRA calculator, 401k comparison, retirement account, tax-advantaged savings">
-    <link rel="canonical" href="https://financecalculators.com/calculators/roth-vs-traditional.html">
+    <link rel="canonical" href="https://financecalc.cc/calculators/roth-vs-traditional.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -242,5 +247,6 @@
     </footer>
 
     <script src="../js/roth-vs-traditional.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
