--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="salary calculator, hourly to annual, wage calculator, pay calculator, income calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/salary.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -175,5 +179,6 @@
     </footer>
 
     <script src="../js/salary.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
