--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -6,7 +6,12 @@
     <title>Self-Employment Tax Calculator - Calculate SE Tax & Quarterly Payments</title>
     <meta name="description" content="Calculate your self-employment tax, estimated quarterly payments, and total tax liability. Essential for freelancers, contractors, and small business owners.">
     <meta name="keywords" content="self-employment tax calculator, SE tax, quarterly taxes, freelancer taxes, 1099 tax calculator">
-    <link rel="canonical" href="https://financecalculators.com/calculators/self-employment-tax.html">
+    <link rel="canonical" href="https://financecalc.cc/calculators/self-employment-tax.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -275,5 +280,6 @@
     </footer>
 
     <script src="../js/self-employment-tax.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
