--- a/calculators/take-home-pay.html
+++ b/calculators/take-home-pay.html
@@ -6,7 +6,12 @@
     <title>Take Home Pay Calculator - Calculate Your Net Paycheck</title>
     <meta name="description" content="Calculate your take home pay after federal and state taxes, Social Security, Medicare, and other deductions. See your actual paycheck amount.">
     <meta name="keywords" content="take home pay calculator, paycheck calculator, net pay, salary after taxes, payroll calculator">
-    <link rel="canonical" href="https://financecalculators.com/calculators/take-home-pay.html">
+    <link rel="canonical" href="https://financecalc.cc/calculators/take-home-pay.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -302,5 +307,6 @@
     </footer>
 
     <script src="../js/take-home-pay.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
