--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,11 @@
     <title>Privacy Policy - FinCalc</title>
     <meta name="description" content="Privacy Policy for FinCalc financial calculators. Learn how we handle your data and protect your privacy.">
     <link rel="canonical" href="https://financecalc.cc/privacy.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
