--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,11 @@
     <title>Terms of Service - FinCalc</title>
     <meta name="description" content="Terms of Service for FinCalc financial calculators.">
     <link rel="canonical" href="https://financecalc.cc/terms.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
