--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="auto loan calculator, car payment calculator, car loan calculator, vehicle financing calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/auto-loan.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -199,5 +203,6 @@
     </footer>
 
     <script src="../js/auto-loan.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
