--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="compound interest calculator, investment calculator, savings calculator, interest rate calculator, money growth">
     <link rel="canonical" href="https://financecalc.cc/calculators/compound-interest.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -200,5 +204,6 @@
     </footer>
 
     <script src="../js/compound-interest.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
