--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="inflation calculator, purchasing power calculator, future value calculator, cost of living calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/inflation.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -168,5 +172,6 @@
     </footer>
 
     <script src="../js/inflation.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
