--- a/calculators/rent-vs-buy.html
+++ b/calculators/rent-vs-buy.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rent vs Buy Calculator - Should You Rent or Buy a Home?</title>
     <meta name="description" content="Free rent vs buy calculator. Compare the true costs of renting versus buying a home over time.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -197,5 +202,6 @@
     </footer>
 
     <script src="../js/rent-vs-buy.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
