--- a/calculators/savings-goal.html
+++ b/calculators/savings-goal.html
@@ -8,6 +8,10 @@
     <meta name="keywords" content="savings goal calculator, savings calculator, how much to save, monthly savings calculator">
     <link rel="canonical" href="https://financecalc.cc/calculators/savings-goal.html">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -163,5 +167,6 @@
     </footer>
 
     <script src="../js/savings-goal.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
