--- a/calculators/social-security.html
+++ b/calculators/social-security.html
@@ -6,7 +6,12 @@
     <title>Social Security Benefits Calculator - Estimate Your Retirement Benefits</title>
     <meta name="description" content="Calculate your estimated Social Security retirement benefits based on your earnings history and retirement age. Plan your retirement income strategy.">
     <meta name="keywords" content="social security calculator, retirement benefits, SSA benefits, social security estimate, retirement planning">
-    <link rel="canonical" href="https://financecalculators.com/calculators/social-security.html">
+    <link rel="canonical" href="https://financecalc.cc/calculators/social-security.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -197,5 +202,6 @@
     </footer>
 
     <script src="../js/social-security.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
