--- a/calculators/student-loan.html
+++ b/calculators/student-loan.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Loan Calculator - Plan Your Repayment</title>
     <meta name="description" content="Free student loan calculator. Calculate monthly payments, explore repayment plans, and see total interest costs.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script src="/js/init.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -156,5 +161,6 @@
     </footer>
 
     <script src="../js/student-loan.js"></script>
+    <script src="../js/monetization.js"></script>
 </body>
 </html>
