--- a/index.html
+++ b/index.html
@@ -8,15 +8,28 @@
     <meta name="keywords" content="mortgage calculator, loan calculator, investment calculator, compound interest calculator, retirement calculator">
     <link rel="canonical" href="https://financecalc.cc/">
 
+    <!-- Force HTTPS -->
+    <script>if(location.protocol !== 'https:' && location.hostname !== 'localhost'){location.replace('https:' + location.href.substring(location.protocol.length));}</script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
     <!-- Open Graph -->
     <meta property="og:title" content="Free Financial Calculators">
     <meta property="og:description" content="Calculate mortgage payments, loan payoff, investment returns and more. 100% free, no signup.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://financecalc.cc/">
+    <meta property="og:image" content="https://financecalc.cc/og-image.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Google AdSense - 审核通过后取消注释并替换 YOUR_PUBLISHER_ID -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9483557811977052" crossorigin="anonymous"></script>
 
     <!-- Structured Data -->
     <script type="application/ld+json">
