--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -47,6 +47,7 @@
             <a href="../" class="logo">FinCalc</a>
             <ul class="nav-links">
                 <li><a href="../#calculators">Calculators</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                 <li><a href="../#about">About</a></li>
             </ul>
         </nav>
