--- a/calculators/social-security.html
+++ b/calculators/social-security.html
@@ -23,6 +23,7 @@
             <a href="../index.html" class="nav-logo">FinanceCalc</a>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
+                <li><a href="/blog/">Blog</a></li>
                 <li><a href="#calculator">Calculator</a></li>
                 <li><a href="#guide">Guide</a></li>
             </ul>
